--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="one">
 <div id="toptitle">
-<h1>Chen Sun</h1>
+<h1>Gloria Website</h1>
 </div>
   
 <h2>About this site</h2>
@@ -25,6 +25,9 @@ One of my best Amazon products for my dog is this toy: [short link] <a href="htt
 This is the text+image <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=chensun134ama-20&language=en_US&marketplace=amazon&region=US&placement=B07BPRKFTN&asins=B07BPRKFTN&linkId=982b55e9a13ff05897dce7297e48c623&show_border=true&link_opens_in_new_window=true"></iframe>
 </p>
 
+<p> There is one dog food brand where is supper good. <a href="https://cab0e92n288p2xd9naxq22yc63.hop.clickbank.net"> Check the link </a> </p>
+
+<p> This is just a test link, you can ignore it. <a href="https://click.linksynergy.com/fs-bin/click?id=QzRmXa%2a2iUg&offerid=311675.10000157&bids=311675.10000157&type=3&subid=0">Technology Used by Successful Businesses</a><img border=0 width=1 height=1 src="https://ad.linksynergy.com/fs-bin/show?id=QzRmXa%2a2iUg&offerid=311675.10000157&bids=311675.10000157&type=3&subid=0"> </p>
   
 </body>
 </html>
